schema-registry/schema-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schema-registry
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schema-registry
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: schema-registry
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: workload
                    operator: In
                    values:
                      - kafka-stream
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    strimzi.io/kind: KafkaConnect
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - env:
            - name: SCHEMA_REGISTRY_HOST_NAME
              value: schema-registry
            - name: SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS
              value: kafka-kraft-kafka-bootstrap.kafka.svc:9092
            - name: SCHEMA_REGISTRY_KAFKASTORE_SECURITY_PROTOCOL
              value: SASL_PLAINTEXT
            - name: SCHEMA_REGISTRY_KAFKASTORE_SASL_MECHANISM
              value: SCRAM-SHA-512
            - name: SCHEMA_REGISTRY_KAFKASTORE_SASL_JAAS_CONFIG
              valueFrom:
                secretKeyRef:
                  key: sasl.jaas.config
                  name: kafka-kraft-user
            - name: SCHEMA_REGISTRY_LISTENERS
              value: http://0.0.0.0:8081
            - name: SCHEMA_REGISTRY_KAFKASTORE_TOPIC
              value: _schemas
            - name: SCHEMA_REGISTRY_KAFKASTORE_TOPIC_CONFIG
              value: cleanup.policy=compact
            - name: SCHEMA_REGISTRY_KAFKASTORE_TOPIC_REPLICATION_FACTOR
              value: '3'
          image: confluentinc/cp-schema-registry:8.0.0
          imagePullPolicy: IfNotPresent
          name: schema-registry
          ports:
            - containerPort: 8081
              protocol: TCP
          resources:
            limits:
              cpu: 250m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 256Mi
