schema-registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: schema-registry
  namespace: kafka
spec:
  ports:
  - port: 8081
    targetPort: 8081
  selector:
    app: schema-registry
